--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-social-icons": "^5.10.0",
+    "react-universal-tilt": "^1.3.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
