--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^17.0.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "react-social-icons": "^5.10.0",
     "react-universal-tilt": "^1.3.1",
     "styled-components": "^5.3.3",
